# Model-Regression-Detection-System

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: regression-check.yml
golden_datasets/: sentiment.json  summarization.json
src/mrds/: __init__.py  alerts.py  baseline.py  cli.py  config.py  dataset.py  detector.py  evaluator.py  metrics.py  report.py
tests/: test_dataset.py  test_detector.py  test_metrics.py
