[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrds"
version = "0.1.0"
description = "Model Regression Detection System — CI/CD pipeline for LLM quality gates"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.30.0",
    "slack-sdk>=3.27.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
mrds = "mrds.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
